unpackaged/main/default/objects/Suspension_History__c/Suspension_History__c.object-meta.xml
<CustomObject>
    <label>Suspension History</label>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>Suspension History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suspension Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>