unpackaged/main/default/objects/Suspension_History__c/fields/Administrator__c.field-meta.xml
<CustomField>
    <fullName>Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administrator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Suspension_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>