unpackaged/main/default/objects/Suspension_History__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <label>Approved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>