unpackaged/main/default/objects/Suspension_History__c/fields/Date_Requested_for_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested_for_Suspension__c</fullName>
    <label>Date Requested for Suspension</label>
    <type>Date</type>
</CustomField>