unpackaged/main/default/objects/Suspension_History__c/fields/Date_Suspended__c.field-meta.xml
<CustomField>
    <fullName>Date_Suspended__c</fullName>
    <label>Date Suspended</label>
    <type>Date</type>
</CustomField>