unpackaged/main/default/objects/Suspension_History__c/fields/Reason_For_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Suspension__c</fullName>
    <label>Reason For Suspension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>