unpackaged/main/default/objects/Suspension_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Date_Suspended__c</columns>
    <columns>Reason_For_Suspension__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>